@@ -1,3 +1,8 @@
+2006-01-27  Johan Dahlin  <jdahlin@async.com.br>
+
+	* kiwi/proxies.py (Proxy.update_many): New method, like update but
+	takes a sqeuence instead
+
 2006-01-25  Johan Dahlin  <jdahlin@async.com.br>
 
 	* kiwi/proxies.py (Proxy.remove_widget, Proxy.add_widget): Add, to
